--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -116,10 +116,16 @@ li {
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .worksList {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(6, 1fr);
+    column-gap: 10px;
+    overflow-x: hidden;
+  }
+
+  .homeContainer {
+    overflow-x: hidden;
   }
 }
