--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -107,6 +107,11 @@
     flex-direction: column;
     height: auto;
   }
+
+  * {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 1100px) {
@@ -116,5 +121,11 @@
     grid-template-rows: repeat(6, 1fr);
     position: relative;
     right: 20px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .searchResults {
+    column-gap: 10px;
   }
 }
